# Exercise-3--Data-Engineering

./: README.md  main.py  pyproject.toml
data/: weather_data.json  weather_data_2.json
services/: services.py
